--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.4.7",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "eslint": "^7.32.0",
